--- a/optimlib_docs_bfgs.html
+++ b/optimlib_docs_bfgs.html
@@ -149,7 +149,7 @@ bool bfgs(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& va
 
 <p><strong>Function arguments:</strong></p>
 <ul>
-    <li><code>init_out_vals</code> a column vector of initial values, which will contain the output values.</li>
+    <li><code>init_out_vals</code> a column vector of initial values, which will be replaced by the solution values.</li>
     <li><code>opt_objfn</code> the function to be minimized, taking three arguments: 
         <ul>
             <li><code>vals_inp</code> a vector of inputs;</li>
