--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -125,10 +125,7 @@ pre {
     </div>
 </div>
 
-<p>The Broyden–Fletcher–Goldfarb–Shanno (BFGS) algorithm is a quasi-Newton optimization method used to solve convex optimization problems.</p>
-
-<hr>
-<!--<p> &nbsp </p>-->
+<p>Differential Evolution (DE) is a stochastic genetic algorithm for global optimization of potentially ill-behaved objective functions.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
