--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -125,7 +125,7 @@ pre {
     </div>
 </div>
 
-<p>Differential Evolution (DE) is a stochastic genetic algorithm for global optimization of potentially ill-behaved objective functions.</p>
+<p>Differential Evolution (DE) is a stochastic genetic algorithm for global optimization of potentially ill-behaved nonlinear objective functions.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
