--- a/optimlib.html
+++ b/optimlib.html
@@ -101,7 +101,7 @@ pre {
 <div class="row">
     <div class="col-md-4">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
-        <a href="optimlib_docs_bfgs.html#example " target="_blank"><img src="pics/sphere_fn.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a>
+        <a href="optimlib_docs_bfgs.html#examples" target="_blank"><img src="pics/sphere_fn.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a>
     </div>
     <div class="col-md-4">
         <br>
@@ -117,7 +117,7 @@ pre {
     <div class="col-md-4">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <!-- <img src="pics/rastrigin_fn.png" class="img-rounded pull-right" alt="Sphere" width="304" height="236"> -->
-        <a href="optimlib_docs_de.html#example" target="_blank"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a>
+        <a href="optimlib_docs_de.html#examples" target="_blank"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a>
     </div>
 </div>
 
