--- a/optimlib_docs_cg.html
+++ b/optimlib_docs_cg.html
@@ -106,12 +106,30 @@ pre {
         </div>
         <!-- /.row -->
 
-<h3 style="text-align: left;"><strong style="font-size: 120%;">OptimLib: Nonlinear Conjugate Gradient Method</strong></h3>
+<br>
 
-<hr>
-<!--<p> &nbsp </p>-->
+<div class="row">
+    <div class="col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">OptimLib: Conjugate Gradient</strong></h4></a>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <a href="#definition">Method Definition</a> <br>
+                    <a href="#details">Details</a> <br>
+                    <a href="#examples">Examples</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <p>The Nonlinear Conjugate Gradient (CG) method generalizes its <a href="https://en.wikipedia.org/wiki/Conjugate_gradient_method">linear namesake</a> to a broader class of convex optimization problems.</p>
+
+<hr style="height:2px;border-width:0;background-color:black">
+
+<h3 style="text-align: left;" id="definition"><strong style="font-size: 100%;">Method Definition</strong></h3>
 
 <p><strong>Function definition:</strong></p>
 <pre class="brush: cpp;">
@@ -126,11 +144,11 @@ bool cg(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
 </pre>
 <p><strong>Function arguments:</strong></p>
 <ul>
-    <li><code>init_out_vals</code> a column vector of initial values; will contain the final values.</li>
+    <li><code>init_out_vals</code> a column vector of initial values; will be replaced by the solution values.</li>
     <li><code>opt_objfn</code> the function to be minimized, taking three arguments: 
         <ul>
             <li><code>vals_inp</code> a vector of inputs;</li>
-            <li><code>grad_out</code> a vector to store the gradient values; and</li>
+            <li><code>grad_out</code> a vector to store the gradient; and</li>
             <li><code>opt_data</code> additional parameters passed to the function.</li>
         </ul>
     <li><code>opt_data</code> additional parameters passed to the function.</li>
@@ -139,15 +157,15 @@ bool cg(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
 
 <p><strong>Optimization control parameters:</strong></p>
 <ul>
-    <li><code>double err_tol</code> the value controlling how small $\| \nabla f \|$ should be before 'convergence' is declared.</li>
+    <li><code>double err_tol</code> the tolerance value controlling how small $\| \nabla f \|$ should be before 'convergence' is declared.</li>
     <li><code>int iter_max</code> the maximum number of iterations/updates before the algorithm exits.</li>
     <li><code>int cg_method</code> which updating formula to use; see the details section below.</li>
     <li><code>double cg_restart_threshold</code> the value $\nu$ in the details section below.</li>
 </ul>
 
-<hr>
+<hr style="height:2px;border-width:0;background-color:black">
 
-<h3 style="text-align: left;"><strong style="font-size: 100%;">Details:</strong></h3>
+<h3 style="text-align: left;" id="details"><strong style="font-size: 100%;">Details</strong></h3>
 
 <p>Let $x_i$ denote the values at stage $i$ of the algorithm. The Nonlinear Conjugate Gradient updating rule is as follows.</p>
 $$d_i = - \nabla f_{i} + \beta_i \times d_{i-1}$$
@@ -179,6 +197,106 @@ $$\dfrac{|\nabla f_i \cdot \nabla f_{i-1}|}{\nabla f_{i} \cdot \nabla f_{i}} > \
     <li> Hager-Zhang: (<code>method_cg = 6</code>):</li>
         $$\beta_{\text{HZ}} = \left( y - 2 \times \dfrac{y \cdot y}{y \cdot d} \times d \right) \cdot \dfrac{\nabla f_i}{y \cdot d}, \ \ \ y := \nabla f_i - \nabla f_{i-1}$$
 </ul>
+
+<hr style="height:2px;border-width:0;background-color:black">
+
+<h3 style="text-align: left;" id="examples"><strong style="font-size: 100%;">Examples</strong></h3>
+
+<p>As examples, consider minimization of:</p>
+<ul>
+    <li>the Sphere function
+    $$\min_{x \in \mathbb{R}^n} \sum_{i=1}^n x_i^2$$
+    The solution is the zero vector</li>
+    <li>Booth's function
+    $$\min_{x \in [-10,10]^2} \left\{ (x_1 + 2x_2 - 7)^2 + (2 x_1 + x_2 - 5)^2 \right\}$$
+    The global minimum is located at $(1,3)$.</li>
+</ul>
+<p>Below are plots of each example, restricted to the two-dimensional problem where relevant.</p>
+
+<div class="row">
+    <div class="col-md-6">
+        <h3 style="text-align: center;"><strong style="font-size: 110%;">Sphere</strong></h3>
+        <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
+        <img class="img-responsive center-block" src="pics/sphere_fn.png" alt="">
+    </div>
+    <div class="col-md-6">
+        <h3 style="text-align: center;"><strong style="font-size: 110%;">Booth</strong></h3>
+        <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
+        <!-- <img src="pics/rastrigin_fn.png" class="img-rounded pull-right" alt="Sphere" width="304" height="236"> -->
+        <img class="img-responsive center-block" src="pics/booth_fn_3d.png" alt=""> 
+    </div>
+</div>
+
+<br>
+
+<p>Code solving each example using OptimLib is given below.</p>
+
+<pre class="brush: cpp;">
+#include "optim.hpp"
+
+double sphere_fn(const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)
+{
+    double obj_val = arma::dot(vals_inp,vals_inp);
+    //
+    if (grad_out) {
+        *grad_out = 2.0*vals_inp;
+    }
+    //
+    return obj_val;
+}
+
+double booth_fn(const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)
+{
+    double x_1 = vals_inp(0);
+    double x_2 = vals_inp(1);
+
+    double obj_val = std::pow(x_1 + 2*x_2 - 7.0,2) + std::pow(2*x_1 + x_2 - 5.0,2);
+    //
+    if (grad_out) {
+        (*grad_out)(0) = 2*(x_1 + 2*x_2 - 7.0) + 2*(2*x_1 + x_2 - 5.0)*2;
+        (*grad_out)(1) = 2*(x_1 + 2*x_2 - 7.0)*2 + 2*(2*x_1 + x_2 - 5.0);
+    }
+    //
+    return obj_val;
+}
+
+int main()
+{
+    //
+    // sphere function
+
+    const int test_dim = 5;
+
+    arma::vec x = arma::ones(test_dim,1); // initial values (1,1,...,1)
+
+    bool success = optim::cg(x,sphere_fn,nullptr);
+
+    if (success) {
+        std::cout << "cg: sphere test completed successfully." << std::endl;
+    } else {
+        std::cout << "cg: sphere test completed unsuccessfully." << std::endl;
+    }
+
+    arma::cout << "cg: solution to sphere test:\n" << x << arma::endl;
+
+    //
+    // Booth function
+
+    arma::vec x_2 = arma::zeros(2,1) + 2; // initial values (2,2)
+
+    bool success_2 = optim::cg(x,booth_fn,nullptr);
+
+    if (success_2) {
+        std::cout << "cg: Booth test completed successfully." << std::endl;
+    } else {
+        std::cout << "cg: Booth test completed unsuccessfully." << std::endl;
+    }
+
+    arma::cout << "cg: solution to Booth test:\n" << x_2 << arma::endl;
+
+    return 0;
+}
+</pre>
 
         <hr>
 
