--- a/optimlib_docs_bfgs.html
+++ b/optimlib_docs_bfgs.html
@@ -119,7 +119,7 @@ pre {
             </div>
             <div id="collapse1" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <a href="#definition">Method Definition</a> <br>
+                    <a href="#definition">Definition</a> <br>
                     <a href="#details">Details</a> <br>
                     <a href="#examples">Examples</a>
                 </div>
@@ -132,7 +132,7 @@ pre {
 
 <hr style="height:2px;border-width:0;background-color:black">
 
-<h3 style="text-align: left;" id="definition"><strong style="font-size: 100%;">Method Definition</strong></h3>
+<h3 style="text-align: left;" id="definition"><strong style="font-size: 100%;">Definition</strong></h3>
 
 <!-- <br> -->
 
