--- a/optimlib_docs_cg.html
+++ b/optimlib_docs_cg.html
@@ -91,6 +91,7 @@ pre {
                             <li class="active"><a href="optimlib_docs_cg.html">Conjugate Gradient</a></li>
                             <li><a href="optimlib_docs_de.html">Differential Evolution</a></li>
                             <li><a href="optimlib_docs_nm.html">Nelder-Mead</a></li>
+                            <li><a href="optimlib_docs_pso.html">Particle Swarm</a></li>
                             <li class="divider"></li>
                             <li><a href="optimlib_docs_sumt.html">SUMT</a></li>
                         </ul>
