--- a/optimlib_docs_nm.html
+++ b/optimlib_docs_nm.html
@@ -91,6 +91,7 @@ pre {
                             <li><a href="optimlib_docs_cg.html">Conjugate Gradient</a></li>
                             <li><a href="optimlib_docs_de.html">Differential Evolution</a></li>
                             <li class="active"><a href="optimlib_docs_nm.html">Nelder-Mead</a></li>
+                            <li><a href="optimlib_docs_pso.html">Particle Swarm</a></li>
                             <li class="divider"></li>
                             <li><a href="optimlib_docs_sumt.html">SUMT</a></li>
                         </ul>
@@ -106,12 +107,29 @@ pre {
         </div>
         <!-- /.row -->
 
-<h3 style="text-align: left;"><strong style="font-size: 120%;">OptimLib: Nelder-Mead Simplex Method</strong></h3>
+<div class="row">
+    <div class="col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">OptimLib: Nelder-Mead</strong></h4></a>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <a href="#definition">Definition</a> <br>
+                    <a href="#details">Details</a> <br>
+                    <!-- <a href="#examples">Examples</a> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<hr>
-<!--<p> &nbsp </p>-->
+<p>Nelder-Mead is a derivative-free simplex method.</p>
 
-<p><strong>Function definition:</strong></p>
+<hr style="height:2px;border-width:0;background-color:black">
+
+<h3 style="text-align: left;" id="definition"><strong style="font-size: 100%;">Definition</strong></h3>
+
 <pre class="brush: cpp;">
 // internal
 bool nm_int(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data, double* value_out, optim_opt_settings* opt_params);
@@ -124,7 +142,7 @@ bool nm(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
 </pre>
 <p><strong>Function arguments:</strong></p>
 <ul>
-    <li><code>init_out_vals</code> a column vector of initial values; will contain the final values.</li>
+    <li><code>init_out_vals</code> a column vector of initial values; will be replaced by the solution values.</li>
     <li><code>opt_objfn</code> the function to be minimized, taking three arguments: 
         <ul>
             <li><code>vals_inp</code> a vector of inputs;</li>
@@ -142,8 +160,40 @@ bool nm(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
     <li><code>double nm_par_alpha</code> reflection parameter.</li>
     <li><code>double nm_par_gamma</code> expansion parameter.</li>
     <li><code>double nm_par_beta</code> contraction parameter.</li>
-    <li><code>double nm_par_alpha</code> shrikage parameter.</li>
+    <li><code>double nm_par_delta</code> shrikage parameter.</li>
 </ul>
+
+<hr style="height:2px;border-width:0;background-color:black">
+
+<h3 style="text-align: left;" id="details"><strong style="font-size: 100%;">Details</strong></h3>
+
+<p>Let $x_i$ denote the simplex values at stage $i$ of the algorithm. The Nelder-Mead updating rule is as follows.</p>
+
+<ul>
+    <li><strong>Step 1.</strong> Sort the vertices from smallest function value to largest:</li>
+        $$f(x_i(1,:)) \leq f(x_i(2,:)) \leq \cdots \leq f(x_i(n+1,:))$$
+    <li><strong>Step 2.</strong> Calculate the centroid value up to the $n$ vertex:
+        $$\bar{x} = \frac{1}{n} \sum_{j=1}^n x_i(j,:)$$
+        and compute the reflected point:
+        $$x^r = \bar{x} + \alpha (\bar{x} - x_i(n+1,:))$$
+        If $f(x^r) \geq f(x_i(1,:))$ and $f(x^r) < f(x_i(n,:))$, then
+        $$x_{i+1}(n+1,:) = x^r, \ \ \textbf{ and go to Step 1.}$$
+        Otherwise continue to Step 3.</li>
+    <li><strong>Step 3.</strong> If $f(x^r) \geq f(x_i(1,:))$ then go to Step 4, otherwise compute the expansion point:
+        $$x^e = \bar{x} + \gamma (x^r - \bar{x})$$
+        Set
+        $$x_{i+1}(n+1,:) = \begin{cases} x^e & \text{ if } f(x^e) < f(x^r) \\ x^r & \text{ else } \end{cases}$$
+        <strong>and go to Step 1.</strong></li>
+    <li><strong>Steps 4 & 5.</strong> If $f(x^r) < f(x_i(n,:))$, then compute the outside or inside contraction:
+        $$x^{c} = \begin{cases} \bar{x} + \beta(x^r - \bar{x}) & \text{ if } f(x^r) < f(x_i(n+1,:)) \\ \bar{x} - \beta(x^r - \bar{x}) & \text{ else} \end{cases}$$
+        If $f(x^c) < f(x_i(n+1,:))$,
+        $$x_{i+1}(n+1,:) = x^c, \ \ \textbf{ and go to Step 1.}$$
+        Otherwise go to Step 6.</li>
+    <li><strong>Step 6.</strong> Shrink the simplex toward $x_i(1,:)$:
+        $$x_{i+1}(j,:) = x_i(1,:) + \delta (x_i(j,:) - x_i(1,:)), \ \ j = 2, \ldots, n+1$$
+        Go to Step 1.</li>
+</ul>
+
 
         <hr>
 
