--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                     </div>
                     <div class="panel-body">
                         <p>Research</p>
-                        <a href="#" class="btn btn-default disabled" role="button" aria-disabled>Link</a>
+                        <!-- <a href="#" class="btn btn-default disabled" role="button" aria-disabled>Link</a> -->
+                        <a href="research.html" target="_blank" class="btn btn-default">Link</a>
                     </div>
                 </div>
             </div>
