--- a/gcem.html
+++ b/gcem.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Generalized Constant Expression Math: a compile-time templated library of special functions.">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="constexpr, compile-time library, special functions, template metaprogramming, C++, C++11, C++14, Cpp, NYU, New York University, Math, Econometrics, Research" />
+    <meta name="keywords" content="generalized constant expression, constexpr, math, compile-time library, special functions, template metaprogramming, C++, C++11, C++14, Cpp, NYU, New York University, Econometrics, Research" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
