--- a/about.html
+++ b/about.html
@@ -69,13 +69,8 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">About
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="http://www.kthohr.com">Home</a>
-                    </li>
-                    <li class="active">About</li>
-                </ol>
+                <h1 class="page-header">About </h1>
+                <br>
             </div>
         </div>
         <!-- /.row -->
