--- a/about.html
+++ b/about.html
@@ -81,8 +81,9 @@
                 <img class="img-responsive" src="pics/wsp_2.jpg" alt="">
             </div>
             <div class="col-md-8">
-                <h2>About</h2>
-                <p>My name is Keith O'Hara. I am a Ph.D. Candidate at the Department of Economics, New York University.</p>
+                <!-- <h2>About</h2> -->
+                <br>
+                <p>My name is Keith O'Hara. I am a Ph.D. Candidate at the <abbr title="New York University">NYU</abbr> Department of Economics.</p>
                 <h3>Contact Details</h3>
                 <p><i class="fa fa-address-book-o"></i>
                     <abbr title="Mailing Address">M</abbr>:<br>
