--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
             <div class="col-md-8">
                 <!-- <h2>About</h2> -->
                 <br>
-                <p>My name is Keith O'Hara. I am a Ph.D. Candidate at the <abbr title="New York University">NYU</abbr> Department of Economics.</p>
+                <p>My name is Keith O'Hara. I am a Ph.D. Candidate at <abbr title="New York University">NYU</abbr>'s Department of Economics.</p>
                 <h3>Contact Details</h3>
                 <p><i class="fa fa-address-book-o"></i>
                     <abbr title="Mailing Address">M</abbr>:<br>
