--- a/about.html
+++ b/about.html
@@ -25,9 +25,8 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <style>
-    h3:target { padding-top: 60px; margin-top: -60px;}
-    </style>
+    <!-- Additional Settings -->
+    <link href="css/kthohr_settings.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
