--- a/bmr.html
+++ b/bmr.html
@@ -25,9 +25,8 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <style>
-    h3:target { padding-top: 60px; margin-top: -60px;}
-    </style>
+    <!-- Additional Settings -->
+    <link href="css/kthohr_settings.css" rel="stylesheet">
 
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
