--- a/gcem.html
+++ b/gcem.html
@@ -25,13 +25,12 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Keith CSS -->
+    <link href="css/kthohr_settings.css" rel="stylesheet">
+
     <!-- Syntax Highlighter -->
     <script type="text/javascript" src="js/syntaxhighlighter.js"></script>
     <link type="text/css" rel="stylesheet" href="css/swift_theme.css">
-
-    <style>
-    h3:target { padding-top: 60px; margin-top: -60px;}
-    </style>
 
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
